# games-challenges-app

./: .env.template  .gitignore  GamesChallengesApp.slnx  Makefile  README.md  docker-compose.override.yaml.template  docker-compose.yaml
infra/gateway/: .env.template  docker-compose.yaml  pyproject.toml
infra/gateway/src/: main.py
infra/gateway/src/api/: main_proxy_api.py
infra/gateway/src/core/: logging_core.py  redis_core.py
infra/gateway/src/exceptions/: code_exceptions.py  exception_handlers.py
infra/gateway/src/models/: enums.py
infra/gateway/src/services/: token_service.py
infra/gateway/src/utils/: annotations.py
services/challenges/: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
services/challenges/migrations/: env.py
services/challenges/migrations/versions/: 2026_02_15_1949-initial_migrations_add_models_tag_game_chalenge.py  2026_03_02_1137-initial_migrations_add_models_tag_game_chalenge.py  2026_03_26_1038-срфchange_table_name_chalenge_challenges.py  2026_03_26_1102-remove_unique_constraiment_fomr_name_field.py  2026_03_29_1106-remove_user_id_and_status_fields_from_tag_model.py  2026_04_13_0730-add-comments-and-reactions.py
services/challenges/src/: main.py
services/challenges/src/Challenges.Api/: Challenges.Api.csproj  Challenges.Api.http  WeatherForecast.cs
services/challenges/src/Challenges.Application/: Challenges.Application.csproj  Class1.cs
services/challenges/src/Challenges.Domain/: Class1.cs
services/challenges/src/Challenges.Infrastructure/: Challenges.Infrastructure.csproj  Class1.cs
services/challenges/src/Challenges.Tests/: UnitTest1.cs
services/challenges/src/config/: db.py  logger.py  redis.py
services/challenges/src/exceptions/: challenges.py  exception_handlers.py  exceptions.py  games.py  users.py
services/challenges/src/middlewares/: access_control.py  auth.py
services/challenges/src/models/: __init__.py  association.py  base.py  chalenges.py  challenges.py  comments.py  games.py  reactions.py  (+1 more)
(+191 files in other folders)
