[project]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "Maks1mka",email = "maksim_goncharov_2006@mail.ru"}
]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.13, <3.14"
fastapi = "^0.129.0"
httpx = "^0.28.1"
uvicorn = "^0.40.0"
python-dotenv = "^1.2.1"
redis = "^7.2.1"
pyjwt = "^2.12.1"
multidict = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
