[project]
name = "challenges-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Maks1mka",email = "maksim_goncharov_2006@mail.ru"}
]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.13, <3.14"
pydantic = "^2.12.5"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.46"
fastapi = "^0.129.0"
httpx = "^0.28.1"
uvicorn = "^0.40.0"
psycopg2-binary = "^2.9.11"
alembic = "^1.18.4"
python-dotenv = "^1.2.1"
redis = "^7.2.1"
python-multipart = "^0.0.22"


[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^26.1.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"
faker = "^40.4.0"
pytest = "^9.0.2"
pytest-alembic = "^0.12.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-env = "^1.3.2"
pytest-httpx = "^0.36.0"
pytest-mock = "^3.15.1"
pytest-xdist = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.mypy_cache
  | \.idea
)/
'''


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true


[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "C0330", "C0326"]


[tool.pylint.format]
max-line-length = 120
